# Sui

./: .gitignore  README.md
Sui/: CLAUDE.md  CMakeLists.txt  README.md  resource.rc  scene.json
Sui/DemoProject/Geometry/: box2.geometry.json  heightmap.geometry.json  sp.geometry.json
Sui/DemoProject/material/: basic.matl.json  basicWire.matl.json
Sui/DemoProject/prefab/: 3d.prefab.json  about.prefab.json  button.prefab.json  cottage.prefab.json  login.prefab.json
Sui/Naga/: CMakeLists.txt  FsUtil.cpp  FsUtil.h  MathEx.cpp  MathEx.h  NagaPredef.h  StrUtil.h  TimeUtil.cpp  TimeUtil.h  Utf8Util.cpp  Utf8Util.h  Win32Utf8Util.h
Sui/UrgcDll/: CMakeLists.txt  Urgc.h  urgc.cpp  urgc_api.h
Sui/asset/: 100.w3e  Triangle.json  TriangleFix.json  a.fs  a.vs  basic.fs  basic.matl.json  billboard.fs  billboard.matl.json  box.vs  button.json  css.js  depth.fs  depth.matl.json  depth.vs  heightmap.fs  heightmap.matl.json  heightmap.vs  hi.matl.json  line.fs  line.matl.json  line.vs  mdx.fs  mdx.matl.json  mdx.vs  outlineDraw.fs  outlineDraw.matl.json  outlineDraw.vs  outlineMask.fs  outlineMask.matl.json  outlineMask.vs  particle.fs  particle.matl.json  particle.vs  skybox.fs  skybox.matl.json  skybox.vs  style.js
Sui/asset/Cliffs/: CliffsAAAB0.mdl
Sui/asset/Doodads/: Doodads.slk
Sui/asset/matl/: box.fs
Sui/asset/styles/: DockLayout.styles.js  MenuItem.styles.js  Panel.styles.js  PinView.styles.js  ProgressView.styles.js  Select.styles.js  Slider.styles.js  Splitter.styles.js  TableView.styles.js  TimelineViewTreeItem.styles.js  TreeView.styles.js  VerImgLabel.styles.js  button.styles.js  checkbox.styles.js  switch.styles.js
Sui/doc/: 3dmodel load.md  DrawDegree2.ts  gizmo.md  insp-serial.md  react-slot设计.md  todo.md
Sui/doc/win32/: glfw窗口流程-pixelformat-msaa-半透明窗口.md  使用窗口自定义弹出菜单.md  布局性能优化.md  目录监控.md  窗口-多窗口与opengl渲染.md  窗口-模态窗口.md  窗口-透明窗口.md  窗口.md  窗口无边框.md  菜单.md  键盘.md  鼠标.md
Sui/doc/win32/transparentWindow/: Resource.h  transparentWindow.cpp  transparentWindow.rc  transparentWindow.sln  transparentWindow.vcxproj  transparentWindow.vcxproj.filters
Sui/lib/: assimp.lib  bentleyottmann.dll.lib  compression_utils_portable.lib  expat.lib  libjpeg.lib  libpng.lib  libwebp.lib  libwebp_sse41.lib  miniaudio.lib  skcms.lib  skia.dll.lib  skparagraph.dll.lib  skshaper.dll.lib  sktext.dll.lib  skunicode.dll.lib  wuffs.lib  zlib.lib
Sui/src/: Main.orc  MainProject.orc  MainProject_orc.c  MainProject_orc.h  Main_orc.c  Main_orc.h  Main_win32.cpp  SuiDesignerMain.orc  SuiDesignerMain_orc.c  SuiDesignerMain_orc.h  Test.orc  Test_orc.c  Test_orc.h  clang-config.json  testTgfx.cpp2
Sui/src/HoroEditor/: Horo2dSceneView.orc  Horo2dSceneView_orc.c  Horo2dSceneView_orc.h  Horo3dSceneView.orc  Horo3dSceneView_orc.c  Horo3dSceneView_orc.h  HoroEditCtx.orc  HoroEditCtx_orc.c  HoroEditCtx_orc.h  HoroEditor.orc  HoroEditor_orc.c  HoroEditor_orc.h  HoroGeometryPreviewView.orc  HoroGeometryPreviewView_orc.c  HoroGeometryPreviewView_orc.h  HoroInspView.orc  HoroInspView_orc.c  HoroInspView_orc.h  HoroMaterialIcon.orc  HoroMaterialIcon_orc.c  HoroMaterialIcon_orc.h  HoroSceneHierView.orc  HoroSceneHierView_orc.c  HoroSceneHierView_orc.h  ImageChessBg.orc  ImageChessBg_orc.c  ImageChessBg_orc.h  SceneTransform.orc  SceneTransform_orc.c  SceneTransform_orc.h  UiAct.orc  UiAct_orc.c  UiAct_orc.h
Sui/src/Json/: Json.orc  Json_extern.cpp  Json_orc.c  Json_orc.h
Sui/src/Orc/: CostUs.h  List.orc  List_extern.cpp  List_orc.c  List_orc.h  Map.orc  Map_extern.cpp  Map_orc.c  Map_orc.h  Math.orc  Math_extern.cpp  Math_orc.c  Math_orc.h  Mutex.orc  Mutex_extern.cpp  Mutex_orc.c  Mutex_orc.h  Number.orc  Number_orc.c  Number_orc.h  Orc.c  Orc.h  Path.orc  Path_extern.cpp  Path_orc.c  Path_orc.h  ScopeData.orc  ScopeData_orc.c  ScopeData_orc.h  String.orc  String_extern.cpp  String_orc.c  String_orc.h  Thread.orc  Thread_extern.cpp  Thread_orc.c  Thread_orc.h  Time.orc  Time_orc.c  Time_orc.h  (+1 more)
Sui/src/Sgl/: Billboard.orc  Billboard_orc.c  Billboard_orc.h  Bone.orc  Bone_orc.c  Bone_orc.h  Box2.orc  Box2_orc.c  Box2_orc.h  Box3.orc  Box3_orc.c  Box3_orc.h  Buffer.orc  Buffer_extern.cpp  Buffer_orc.c  Buffer_orc.h  Camera.orc  Camera_orc.c  Camera_orc.h  DirLight.orc  DirLight_orc.c  DirLight_orc.h  Draw.orc  DrawCtx.orc  DrawCtx_orc.c  DrawCtx_orc.h  Draw_extern.cpp  Draw_orc.c  Draw_orc.h  Fbo.orc  Fbo_extern.cpp  Fbo_orc.c  Fbo_orc.h  Geometry.orc  GeometryArrow.orc  GeometryArrow_orc.c  GeometryArrow_orc.h  GeometryBox.orc  GeometryBox_orc.c  GeometryBox_orc.h  (+130 more)
Sui/src/Sui/: draw.cpp
Sui/src/Sui/Core/: App.orc  App_orc.c  App_orc.h  App_win32_extern.cpp  Bezier.orc  Bezier_orc.c  Bezier_orc.h  Border.orc  Border_orc.c  Border_orc.h  BoxShadow.orc  BoxShadow_orc.c  BoxShadow_orc.h  Canvas.orc  Canvas_extern.cpp  Canvas_orc.c  Canvas_orc.h  Clipboard.orc  Clipboard_orc.c  Clipboard_orc.h  Clipboard_win32_extern.cpp  Color.orc  Color_orc.c  Color_orc.h  Cursor.orc  Cursor_orc.c  Cursor_orc.h  Cursor_win32_extern.cpp  Defines_win.h  Edge.orc  Edge_orc.c  Edge_orc.h  Emitter.orc  Emitter_orc.c  Emitter_orc.h  Euler.orc  Euler_orc.c  Euler_orc.h  Event.orc  Event_orc.c  (+108 more)
Sui/src/Sui/Dialog/: FileDialog.orc  FileDialog_orc.c  FileDialog_orc.h  (+8 more)
Sui/src/SuiDesigner/: ANode.orc  ANode_orc.c  ANode_orc.h  BezierEditView.orc  BezierEditView_orc.c  BezierEditView_orc.h  ChessBgViewCallback.orc  ChessBgViewCallback_orc.c  ChessBgViewCallback_orc.h  DrawDegree.orc  DrawDegree_orc.c  DrawDegree_orc.h  EditCtx.orc  EditCtx_orc.c  EditCtx_orc.h  EventANodeChanged.orc  EventANodeChanged_orc.c  EventANodeChanged_orc.h  EventFileItemChanged.orc  EventFileItemChanged_orc.c  EventFileItemChanged_orc.h  FileChooser.orc  FileChooser_orc.c  FileChooser_orc.h  FileItem.orc  FileItem_orc.c  FileItem_orc.h  Gizmo.orc  Gizmo_orc.c  Gizmo_orc.h  Insp.orc  InspView.orc  InspView_orc.c  InspView_orc.h  Insp_orc.c  Insp_orc.h  Inspector.orc  InspectorView.orc  InspectorView_orc.c  InspectorView_orc.h  (+72 more)
Sui/src/nanovg/: nanovg.c
glfw-wasm/: CLAUDE.md  CMakeLists.txt  demo.cpp
glfw-wasm/src/: hi.html  hi.js  hi.wasm  main.c
(+473 files in other folders)
